# lab1231-sun-prj

./: .gitignore  README.md
cpp-ws/: .gitignore  CMakeLists.txt  README
cpp-ws/src/: CMakeLists.txt
cpp-ws/src/gist/: CMakeLists.txt  lear_gist_wrapper.cc  lear_gist_wrapper.h
cpp-ws/src/main/: CMakeLists.txt  create_ground_truth_image_of_stanford_background_dataset.cc  extract_gist.cc  main.cc  segment.cc
cpp-ws/src/segment/: segment_wrapper.cc  segment_wrapper.h
cpp-ws/src/util/: CMakeLists.txt  eigenlib_support.cc  eigenlib_support.h
cpp-ws/test/Ladicky.2009/: main.cc  util.h
cpp-ws/test/SLIC-ws/vlfeat-slic-example-master/: Makefile
cpp-ws/test/Shotton.2009/: CMakeLists.txt  main.cc
cpp-ws/test/opengm2/Packer.2010/: CMakeLists.txt  main.cc
cpp-ws/test/pairwise_only/: CMakeLists.txt  main.cc
ladicky-2009/: CMakeLists.txt  README
ladicky-2009/include/ladicky/: ladicky.h  robustpn.h
ladicky-2009/src/: ladicky.cc  main.cc  robustpn.cc
mrf-with-perf-pred/: CMakeLists.txt  README
mrf-with-perf-pred/include/ladicky-mrf/: README.txt  expand.h
mrf-with-perf-pred/include/mrf_with_perf_pred/: mrf_with_perf_pred.h  perf_predictor.h
mrf-with-perf-pred/src/: main.cc  mrf_with_perf_pred.cc  perf_predictor.cc
philipp-unary-mrf/: CMakeLists.txt  main.cc  main.h
philipp-unary-mrf/include/philipp-unary-mrf/: philipp_unary_mrf.h
philipp-unary-mrf/src/: main.cc  philipp_unary_mrf.cc
philipp-unary/cc/src/: CMakeLists.txt  predictor.cpp  settings.h  textonize.cpp  trainer.cpp
philipp-unary/cc/src/algorithm/: jointboost.h
philipp-unary/cc/src/classifier/: textonboost.cpp
philipp-unary/cc/src/feature/: texton.h
philipp-unary/cc/src/util/: labelimage.cpp
shotton-2009/: CMakeLists.txt  README
shotton-2009/include/shotton/: edge_potential.h  loss_functor.h  shotton.h
shotton-2009/src/: edge_potential.cc  main.cc  shotton.cc
svm-struct-ss/: CMakeLists.txt  README  ssvm_ss_dataset_constraint.h  ssvm_ss_image_constraint.h  svm_struct_api.c  svm_struct_api_types.h
svm-struct-ss/src/svm-struct-core/: svm_struct_api.c  svm_struct_api_types.h
svm-struct-ss/src/svm-struct-core/svm_light/: svm_common.c.debug  svm_common.c.debug.2
svm-struct-ss/src/svm-struct-core/svm_struct/: svm_struct_common.h  svm_struct_learn.c  svm_struct_learn.c.debug  svm_struct_learn.h
svm-struct-ss/src/svm-struct-ss/: README  api.cc  api.h  api_types.h  data_param.h  example_param.h  find_most_violated_constraint.h  io.h  joint_feature_extractor.h  learn.cc  loss_function.h  pairwise-mrf.sublime-workspace  predict.cc  setting.h  svm_struct_ss_api.cc  svm_struct_ss_api.h  svm_struct_ss_api_types.h  svm_struct_ss_learn.cc  svm_struct_ss_predict.cc  util.h  version.h
svm-struct-ss/src/svm-struct-ss (copy)/: api.cc  data_param.h  example_param.h  find_most_violated_constraint.h  io.h  joint_feature_extractor.h  loss_function.h  setting.h
via-google/: CMakeLists.txt  README  temp_log  transform.sh
via-google/include/shotton/: edge_potential.h  shotton.h
via-google/src/: CMakeLists.txt  temp_log
via-google/src/executables/: classlist  config  config_current  deploy.sh  google_object  object_dpm  parameters  temp_log  test.sh  transform.sh
via-google/src/executables/VOCcode/: evaluate.m
via-google/src/executables/baseline-evaluation/: execute.sh
via-google/src/executables/baseline-prediction/: execute.sh  temp_log
via-google/src/executables/datasets-compilator/: classalpha  classbeta  compiler.sh  execute.sh  imgfolddir  resembler.sh  test.sh
via-google/src/executables/evaluation/: execute.sh
via-google/src/executables/extract-boundaries/: execute.sh  extract.m  extractBoundaries.m  extractBoundariesm  testm
via-google/src/executables/fgannotator/: execute.sh  paletting.m  temp_log
via-google/src/executables/google-retriever/: .URL  .images.html  .images.tsv  README  autodownload.sh  execute.sh  google-images  google-images.js
via-google/src/executables/google-unary-generator/: execute.sh  gen_unary_VGS.sh  temp_log
via-google/src/executables/list-and-extract/: concatenated  demo.m  execute.m  execute.sh  executesh  extendedconcate  extract.m  extract2.m  extract3.m  extractr.m  gatherers.sh  palette.mat  paletting.m  pnglist  voc_config.m
via-google/src/executables/list-and-resize/: execute.sh  transform.m
via-google/src/executables/list-compilator/: compilation  execute.sh  gatherers.sh
via-google/src/executables/multiannotation/: execute.sh  temp_log
via-google/src/executables/param-enhancer/: execute.sh  temp_log
via-google/src/executables/param-generator/: VG_train_gen_model.sh  execute.sh  temp_log
via-google/src/executables/resizer/: gatherers.sh
via-google/src/executables/smrf/: CMakeLists.txt  SMRF.cpp
via-google/src/executables/smrfexecute/: callersh  executesh  gatherers.sh  gatherers2sh
via-google/src/executables/svm-learning/: execute.sh  temp_log
via-google/src/executables/test-unary-generator/: execute.sh  temp_log
via-google/src/executables/textontraining/: execute.sh
via-google/src/executables/train-compilator/: Test.txt  compiler.sh  execute.sh
via-google/src/executables/train-sampling/: Test.txt  execute.sh  gatherer.sh  sample.py
via-google/src/executables/vocannotator/: execute.sh
via-google/src/fgannotator/: CMakeLists.txt  VOC2010.ct  dumper.cpp  edge_potential.cc  main.cc  pmain.cc  shotton.cc
via-google/src/multiannotator/: CMakeLists.txt  edge_potential.cc  main.cc  pmain.cc  shotton.cc
via-google/src/svm-struct-ss/: .gitignore  CMakeLists.txt  Makefile  ssvm_ss_dataset_constraint.h  ssvm_ss_image_constraint.h  svm_struct_api.cpp  svm_struct_api.h  svm_struct_api_types.h
via-google/src/svm-struct-ss-2/: ss_interface.cpp  svm_struct_api.cpp
via-google/src/svm-struct-ss/svm_light/: CMakeLists.txt  svm_common.c  svm_hideo.c  svm_learn.c
via-google/src/svm-struct-ss/svm_struct/: CMakeLists.txt  (+3 more)
via-google/src/textonboost/: CMakeLists.txt  train.sh  train.sh.save
via-google/src/vocgooglemrf/: CMakeLists.txt  execute.sh
via-google/src/vocmrf/: CMakeLists.txt  execute.sh  main.cc  shotton.cc
(+232 files in other folders)
